4.6.0 (Xfce 4.6.0)?
===================

- Fix sysconfdir and datadir not being expanded properly in 
  xinitrc (bug #4924).


4.5.99.1 (Xfce 4.6rc1)
======================

- Determine glade paths used by libxfcegui4 and set environment
  variables like LIBGLADE_MODULE_PATH according to these paths in
  the xinitrc file.


4.5.93 (Xfce 4.6beta3)
======================

- Add --xfce-version option to print the Xfce release version (bug 3754).


4.5.92 (Xfce 4.6beta2)
======================

- Migrate xfce4-session splash settings to xfconf.
- Be sure $XDG_CONFIG_HOME/autostart exists when creating .desktop
  file to disable xfconf migration script.
- Migrate xfwm4 keyboard shortcuts to new xfconf format.


4.5.91 (Xfce 4.6beta1)
======================

- Fix migrating shortcut keys in the xfconf settings migration script.
  Previously keys that had more than one char in the keysym name were
  getting parsed incorrectly.
- Use new keyboard shortcut settings layout in xfconf migration script.
- Migrate xfce4-session settings to xfconf.


4.5.90 (Xfce 4.6alpha)
======================

- Use gnome-screensaver if xscreensaver is not available (Bug #3131)
- Fix syntax error in startxfce script (Bug #3089).
- Fix insecure use of temporary file in startup script.
- Put /usr/local/share first (Bug #2967).
- Fix an issue with the syntax in startxfce4 script (Bug #2967).
- Use real GtkComboBoxEntry instead of separate GtkEntry/Button for
  xfrun4 dialog (bug 3820).
- Remove Xft.dpi fallback setting since xfsettingsd handles this now.
- Update xinitrc to run xfsettingsd instead of xfce-mcs-manager (only
  used when the user has disabled the session manager).
- Add MCS -> Xfconf settings migration script.


4.4.2
=====
- Put back a default DPI value as Xorg (Bug #3164, #3158)
- Use gnome-screensaver if xscreensaver is not available (Bug #3131)
- Fix typo on XDG_DATA_DIRS path definition (Bug #2967).
- Updated credits in the about dialog.